Fix spelling errors.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/premerge-fsf-branch@16918 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/config/mn10200/mn10200.md
+++ b/gcc/config/mn10200/mn10200.md
@@ -30,7 +30,7 @@
 ;; none_0hit - insn does not affect cc but it does modify operand 0
 ;;	This attribute is used to keep track of when operand 0 changes.
 ;; 	See the description of NOTICE_UPDATE_CC for more info.
-;; set_znv - sets z,n,v to useable values; c is unknown.
+;; set_znv - sets z,n,v to usable values; c is unknown.
 ;; set_zn  - sets z,n to usable values; v,c is unknown.
 ;; compare - compare instruction
 ;; clobber - value of cc is unknown
@@ -1708,7 +1708,7 @@
 ;; a few times, then truncating the value to PSImode.
 ;;
 ;; This first pattern combines the shifting & truncation operations, by
-;; itself it is a win because the shifts end up occuring in PSImode instead
+;; itself it is a win because the shifts end up occurring in PSImode instead
 ;; of SImode.  However, it has the secondary effect of giving us the
 ;; opportunity to match patterns which allow us to remove the initial
 ;; extension completely, which is a big win.
