--- a/gcc/config/mn10300/mn10300.md
+++ b/gcc/config/mn10300/mn10300.md
@@ -30,8 +30,8 @@
 ;; none_0hit - insn does not affect cc but it does modify operand 0
 ;;	This attribute is used to keep track of when operand 0 changes.
 ;; 	See the description of NOTICE_UPDATE_CC for more info.
-;; set_znv - insn sets z,n,v to useable values; c is unusable.
-;; set_zn  - insn sets z,n to useable values; v,c are unuseable.
+;; set_znv - insn sets z,n,v to usable values; c is unusable.
+;; set_zn  - insn sets z,n to usable values; v,c are unusable.
 ;; compare - compare instruction
 ;; invert -- like compare, but flags are inverted.
 ;; clobber - value of cc is unknown
