--- a/gcc/config/mn10300/mn10300.md
+++ b/gcc/config/mn10300/mn10300.md
@@ -1,4 +1,4 @@
-; GCC machine description for Matsushita MN10300
+;; GCC machine description for Matsushita MN10300
 ;; Copyright (C) 1996, 1997 Free Software Foundation, Inc.
 
 ;;   Contributed by Jeff Law (law@cygnus.com).
