Fix spelling errors.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/premerge-fsf-branch@16920 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/config/rs6000/rs6000.md
+++ b/gcc/config/rs6000/rs6000.md
@@ -7241,7 +7241,7 @@
   DONE;
 }")
 
-;; If we have -mmiminal-toc, we need to reload r30 after a nonlocal goto.
+;; If we have -mminimal-toc, we need to reload r30 after a nonlocal goto.
 
 (define_insn "nonlocal_goto_receiver"
   [(unspec_volatile [(const_int 0)] 1)]
