* function.c (push_temp_slots_for_block): Remove. 	(push_temp_slots_for_target): Likewise. 	(get_target_temp_slot_level): Likewise. 	(set_target_temp_slot_level): Likewise. 	(get_first_block_beg): Likewise. 	* function.h: Remove corresponding prototypes.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-3_4-basic-improvements-branch@57424 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,12 @@
+2002-09-23  Kazu Hirata  <kazu@cs.umass.edu>
+
+	* function.c (push_temp_slots_for_block): Remove.
+	(push_temp_slots_for_target): Likewise.
+	(get_target_temp_slot_level): Likewise.
+	(set_target_temp_slot_level): Likewise.
+	(get_first_block_beg): Likewise.
+	* function.h: Remove corresponding prototypes.
+
 2002-09-22  Roger Sayle  <roger@eyesopen.com>
 
 	* expr.c (STORE_BY_PIECES_P): New target macro.
