--- a/gcc/doc/invoke.texi
+++ b/gcc/doc/invoke.texi
@@ -3158,6 +3158,9 @@ Print the list of reaching definitions for each variable used in the program.
 Print a raw representation of the tree.
 @item details
 Enable more detailed dumps (not honored by every dump option).
+@item stats
+Enable dumping various statistics about the pass (not honored by every dump
+option).
 @item all
 Turn on all options.
 @end table
