--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,45 @@
+2002-09-04  Jakub Jelinek  <jakub@redhat.com>
+
+	* decl.c (start_cleanup_fn): Clear interface_only before
+	start_function, restore it afterwards.
+
+2002-09-03  Jakub Jelinek  <jakub@redhat.com>
+
+	Revert:
+	2002-08-31  Jason Merrill  <jason@redhat.com>
+	* cp-lang.c (cp_expr_size): Don't abort.
+
+	2002-08-22  Jason Merrill  <jason@redhat.com>
+	PR c++/5607
+	* search.c (check_final_overrider): No longer static.
+	* class.c (update_vtable_entry_for_fn): Call it.
+	* cp-tree.h: Adjust.
+
+	* cp-lang.c (LANG_HOOKS_EXPR_SIZE): Define.
+	(cp_expr_size): New fn.
+	* call.c (convert_arg_to_ellipsis): Promote non-POD warning to error.
+	* typeck.c (build_modify_expr): Don't use save_expr on an lvalue.
+
+2002-03-12  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* cp-lang.c (tree_code_type, tree_code_length, tree_code_name):
+	Define.
+	* decl.c (duplicate_decls): Use TREE_CODE_LENGTH, not
+	tree_code_length.
+	* lex.c (cplus_tree_code_type, cplus_tree_code_length,
+	cplus_tree_code_name): Delete.
+	(cxx_init): Don't call add_c_tree_codes, instead set
+	lang_unsafe_for_reeval.  Don't try to copy into the various
+	tree_code arrays.
+
+2002-05-24  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c++/6794
+	* decl.c (cp_make_fname_decl): If outside of function, emit
+	the variable immediately.
+	* call.c (build_call): Avoid crashing when noreturn function
+	is called outside of function context.
+
 2002-09-01  Alexandre Oliva  <aoliva@redhat.com>
 
 	* parse.y (sizeof, alignof, typeof): New non-terminals to
