--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,107 @@
+2002-09-04  Jakub Jelinek  <jakub@redhat.com>
+
+	* g++.dg/other/cxa-atexit1.C: New test.
+
+2002-08-10  Gwenole Beauchesne  <gbeauchesne@mandrakesoft.com>
+
+	PR target/7559
+	* gcc.c-torture/execute/20020810-1.c: New test.
+
+2002-08-08  Jakub Jelinek  <jakub@redhat.com>
+
+	* gcc.dg/tls/opt-2.c: New test.
+
+2002-05-22  Richard Henderson  <rth@redhat.com>
+
+	* gcc.dg/tls/section-1.c: New test.
+
+2002-08-06  Aldy Hernandez  <aldyh@redhat.com>
+
+	* gcc.dg/tls/diag-3.c: New.
+
+2002-08-08  Jakub Jelinek  <jakub@redhat.com>
+
+	* gcc.dg/typeof-2.c: New test.
+
+2002-08-07  Jakub Jelinek  <jakub@redhat.com>
+
+	* gcc.c-torture/compile/20020807-1.c: New test.
+
+2002-08-05  Jakub Jelinek  <jakub@redhat.com>
+
+	* gcc.c-torture/execute/20020805-1.c: New test.
+
+2002-07-30  Jakub Jelinek  <jakub@redhat.com>
+
+	* gcc.dg/tls/opt-1.c: New test.
+
+2002-07-31  Jakub Jelinek  <jakub@redhat.com>
+
+	* gcc.dg/ia64-visibility-2.c: New test.
+
+2002-07-20  Jakub Jelinek  <jakub@redhat.com>
+
+	* g++.dg/opt/life1.C: New test.
+
+2002-07-11  Jakub Jelinek  <jakub@redhat.com>
+
+	* g++.dg/opt/nrv5.C: New test.
+
+2002-07-05  Jason Merrill  <jason@redhat.com>
+
+	* g++.dg/opt/nrv4.C: New test.
+
+2002-04-09  Jason Merrill  <jason@redhat.com>
+
+	* g++.dg/opt/nrv3.C: New test.
+
+2002-05-31  Jakub Jelinek  <jakub@redhat.com>
+
+	* gcc.dg/20020531-1.c: New test.
+
+2002-06-04  Jakub Jelinek  <jakub@redhat.com>
+
+	* gcc.c-torture/compile/20020604-1.c: New test.
+
+2002-05-08  Tom Rix  <trix@redhat.com>
+
+	* gcc.c-torture/execute/20020508-1.c: New test.
+	* gcc.c-torture/execute/20020508-2.c: New test.
+	* gcc.c-torture/execute/20020508-3.c: New test.
+
+2002-05-20  Jakub Jelinek  <jakub@redhat.com>
+
+	* gcc.dg/20020525-1.c: New test.
+
+2002-05-09  Jason Merrill  <jason@redhat.com>
+
+	* g++.dg/ext/asm2.C: New test.
+
+2002-05-24  Jakub Jelinek  <jakub@redhat.com>
+
+	* g++.dg/ext/pretty1.C: New test.
+	* g++.dg/ext/pretty2.C: New test.
+
+2002-04-30  Jakub Jelinek  <jakub@redhat.com>
+
+	* g++.dg/debug/typedef1.C: New test.
+
+2002-05-08  Jason Merrill  <jason@redhat.com>
+
+	* g++.dg/debug/const1.C: New test.
+
+2002-01-25  Jakub Jelinek  <jakub@redhat.com>
+
+	* g++.dg/other/redecl1.C: New test.
+
+2002-02-26  Jakub Jelinek  <jakub@redhat.com>
+
+	* gcc.dg/ia64-visibility-1.c: New test.
+
+2001-10-12  Jakub Jelinek  <jakub@redhat.com>
+
+	* g++.dg/other/inline1.C: New test.
+
 2002-09-01  Jakub Jelinek  <jakub@redhat.com>
 
 	* gcc.dg/typeof-1.c: New test.
