--- a/libiberty/ChangeLog
+++ b/libiberty/ChangeLog
@@ -1,3 +1,7 @@
+2002-05-13  Andreas Schwab  <schwab@suse.de>
+
+	* config.table: Use mh-x86pic also for x86-64.
+
 2002-08-14  Release Manager
 
 	* GCC 3.2 Released.
