--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,7 @@
+2002-04-29  Gerhard Tonn  <GerhardTonn@swol.de>
+
+	* java/lang/ieeefp.h: Define __IEEE_BIG_ENDIAN for S/390.
+
 2002-08-14  Release Manager
 
 	* GCC 3.2 Released.
