* profile.c (end_branch_prob): Only look for __gcov_init on 	weak-enabled native compilers.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-3_4-basic-improvements-branch@57482 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-09-24  Nathan Sidwell  <nathan@codesourcery.com>
+
+	* profile.c (end_branch_prob): Only look for __gcov_init on
+	weak-enabled native compilers.
+
 2002-09-23  Kazu Hirata  <kazu@cs.umass.edu>
 
 	* config/alpha/alpha.h: Remove commented-out macro
